2008-05-09  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-combo-xml.c, foomatic-perl-data.c, lib/Foomatic/DB.pm:
	  If a printer is in the list of supported printers of a driver
	  XML file but there is no printer XML file for the printer,
	  behave as the printer XML was there, generating a minimalistic
	  pseudo entry. Mark the pseudo entries with the "<noxmlentry />"
	  tag to distinguish them from real or user-contributed entries.

2008-01-29  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: Added "<patents>" tag to driver entries. Drivers
	  which are free software but contain (possibly) patented algorithms
	  (like JBIG compression) should be marked with this tag to warn users
	  about the patent issues when auto-downloading the driver.

2007-12-13  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: Added "<group>" tag to driver entries. Drivers
	  which differ only by their locales ("<locales>" tag) should have the
	  same "<group>" tags. If the user queries a driver giving a locale
	  he gets only the best matching from each group.

2007-12-12  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Allow localized queries by adding a "language"
	  field to the data structure and calling foomatic-perl-data with
	  an appropriate "-l" option.

	* foomatic-perl-data.c: Fixed "-l" option, with "-l" the debug mode
	  was always activated.

2007-12-11  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: Added new XML tags "<licensetext>" (full
	  text of the license), "<locales>" (locales for which this driver
	  is recommended), "<requires>" (drivers which are required to be
	  on the system to run this driver), and "<packages>" (explicit
	  listing of downloadable package files). They were introduced to
	  fulfill demands of the printer manufacturers.

	  Allow internationalization in the "<license>", "<supplier>", and
	  "<supportcontact>" fields.
